[build-system]
requires = ["setuptools", "wheel"]

[project]
name="clickup-apy"
version="0.1.0"
description="Python ClickUp API Wrapper"
authors=[
    { name = "James Richmond" }
]
dependencies=["requests"]

[tool.poetry.dependencies]
python = "^3.8"
clickup-apy = { git = "https://github.com/JRichm/clickup-apy.git" }